--- a/proj.ios/crazyiq/Resources/Info.plist
+++ b/proj.ios/crazyiq/Resources/Info.plist
@@ -9,11 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIconFiles</key>
-	<array>
-		<string>Icon.png</string>
-		<string>Icon@2x.png</string>
-		<string>Icon-72.png</string>
-	</array>
+	<array/>
 	<key>CFBundleIdentifier</key>
 	<string>com.app4cn.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
